objects/Deployment__c.object
<CustomObject>
    <description>This object will show the project deployment details including the schedule.</description>
    <fields>
        <fullName>ABC_DAS_Status__c</fullName>
        <description>CR-20130114-2128 - DAS=Data Audit Summary</description>
        <label>ABC DAS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Null</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Granted_To_Source_System__c</fullName>
        <description>Created for CR-20150429-8923.</description>
        <label>Access Granted To Source System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Spend_Site__c</fullName>
        <description>Created for CR-7163.</description>
        <label>Active Spend Site</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Data_Diagnostics_Sent__c</fullName>
        <label>Data Diagnostics Sent (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Date_Moved_to_Prod_Team__c</fullName>
        <label>Actual Date Moved to Prod Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Development_Complete__c</fullName>
        <description>This field is used to track deployment information for the EAB team. Created for CR-20151116-9383</description>
        <label>Deployment Complete (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Development_Start__c</fullName>
        <description>This field is used to track deployment information for the EAB team. Created for CR-20151116-9383</description>
        <label>Development Start (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Feedback_on_Initial_Data_Provided__c</fullName>
        <inlineHelpText>Date sample data is signed off and full data extract can commence.</inlineHelpText>
        <label>Feedback on Initial Data Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Feedback_on_Sample_Data_Provided__c</fullName>
        <inlineHelpText>Date feedback on the sample data was provided to member.</inlineHelpText>
        <label>Feedback on Sample Data Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initial_Site_Demo__c</fullName>
        <inlineHelpText>Date of soft launch demo</inlineHelpText>
        <label>Initial Site Demo (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Market_Basket_Size__c</fullName>
        <label>Actual Market Basket Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_OA_Presented__c</fullName>
        <description>Actual data OA presented</description>
        <label>OA Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Recurring_Update_Sign_Off__c</fullName>
        <label>Recurring Update Sign-Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Savings_Percent__c</fullName>
        <label>Actual Savings %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Savings__c</fullName>
        <label>Actual Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Target_Validation_Complete__c</fullName>
        <description>This field is used to track deployment information for the EAB team. Created for CR-20151116-9383</description>
        <label>Actual Target Validation Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Target_Validation_Start__c</fullName>
        <description>This field is used to track deployment information for the EAB team. Created for CR-20151116-9383.</description>
        <label>Validation Start (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Validation_Complete__c</fullName>
        <description>Created for CR-20150429-8923.</description>
        <label>Validation Complete (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Functional_Data_Leads_Established__c</fullName>
        <description>Created for CR-20150429-8923.</description>
        <label>All Functional Data Leads Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ambulatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-20120208-409</description>
        <label>Ambulatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analysis_Actual__c</fullName>
        <label>Analysis (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Analysis_Strategy__c</fullName>
        <label>Analysis &amp; Strategy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Analysis_Target__c</fullName>
        <label>Analysis (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Data_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data Analyst responsible for the project deployment tasks</description>
        <label>Data Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BA_Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20140826-7138.</description>
        <label>BA Team Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DeploymentsQIQd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Begin_Historical_Loading__c</fullName>
        <label>Begin Historical Loading</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Management_Actual__c</fullName>
        <label>Bid Management (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Management_Target__c</fullName>
        <label>Bid Management (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Strategy__c</fullName>
        <label>Bid Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is not being populated using the project object. The business analyst should be filled for every new type of deployment under a project to keep track of who was the business analyst during that particular deployment.</inlineHelpText>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCC_Training_Intensive_Onsite__c</fullName>
        <description>Date of CCC Training Intensive Onsite</description>
        <label>Training Intensive Onsite (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCC_UAT_Dashboard__c</fullName>
        <formula>(C_A_DC__c - blankvalue( Actual_Initial_Site_Demo__c , UAT_Onsite__c ))/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCC: UAT (Dashboard)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMA_Deployment_Status__c</fullName>
        <description>Created for CR-20140513-5492</description>
        <formula>IF(
	CMA_PlusMinus__c &lt;= 0,
	&quot;Green&quot;,
	IF(
		CMA_PlusMinus__c &lt;= 14,
		&quot;Yellow&quot;,
		IF(
			CMA_PlusMinus__c &gt; 14,
			&quot;Red&quot;,
			&quot;&quot;
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA: Deployment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMA_Elapsed_Initial_Data_to_Demo__c</fullName>
        <formula>(Actual_Initial_Site_Demo__c-C_A_IDI__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA Elapsed: Initial Data to Demo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Elapsed_Initial_Data_to_End__c</fullName>
        <formula>(C_A_DC__c-C_A_IDI__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA Elapsed: Initial Data to End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Elapsed_Start_to_Demo__c</fullName>
        <formula>(Actual_Initial_Site_Demo__c-C_A_DS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA Elapsed: Start to Demo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMA_PlusMinus__c</fullName>
        <description>Days ahead of or behind the current relevant milestone</description>
        <formula>IF
(
OR(ISBLANK(C_A_DC__c),C_A_DC__c&gt;TODAY()),
IF
(
OR(ISBLANK(Actual_Initial_Site_Demo__c),Actual_Initial_Site_Demo__c&gt;TODAY()),
IF
(
OR(ISBLANK(C_A_IVC__c),C_A_IVC__c&gt;TODAY()),
IF
(
OR(ISBLANK(C_A_DDC__c),C_A_DDC__c&gt;TODAY()),
IF
(
OR(ISBLANK(Feedback_on_Initial_Data_Actual__c),Feedback_on_Initial_Data_Actual__c&gt;TODAY()),
IF
(
OR(ISBLANK(C_A_TPC__c),C_A_TPC__c&gt;TODAY()),
IF
(
C_A_DS__c&gt;TODAY(),
blankvalue(C_A_TPC__c, TODAY()) - C_E_TPC__c,
blankvalue(C_A_TPC__c, TODAY()) - C_E_TPC__c
),
blankvalue(Feedback_on_Initial_Data_Actual__c,Today()) -  Feedback_on_Initial_Data_Expected__c 
),
blankvalue(C_A_DDC__c,Today()) - C_E_DDC__c
),
blankvalue(C_A_IVC__c, TODAY()) - C_E_IVC__c
),
blankvalue(Actual_Initial_Site_Demo__c, TODAY()) - Initial_Site_Demo_Exp__c
),
blankvalue(C_A_DC__c, TODAY()) - C_E_DC__c
),
-999
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA: +/-</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Segment__c</fullName>
        <description>Segment the deployment is currently under</description>
        <inlineHelpText>Segment the deployment is currently under</inlineHelpText>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Site Production</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>On Schedule</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Barriers understood</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Barriers not understood</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Member delay</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Member considering cancelling</fullName>
                <color>#000000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Delay due to app issues</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Future/On Hold</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMA_Stage__c</fullName>
        <formula>IF
(
OR(ISBLANK(C_A_DC__c),C_A_DC__c&gt;TODAY()),
IF
(
OR(ISBLANK(Actual_Initial_Site_Demo__c),Actual_Initial_Site_Demo__c&gt;TODAY()),
IF
(
OR(ISBLANK(C_A_IVC__c),C_A_IVC__c&gt;TODAY()),
IF
(
OR(ISBLANK(C_A_DDC__c),C_A_DDC__c&gt;TODAY()),
IF
(
OR(ISBLANK(Feedback_on_Initial_Data_Actual__c),Feedback_on_Initial_Data_Actual__c&gt;TODAY()),
IF
(
OR(ISBLANK(C_A_TPC__c),C_A_TPC__c&gt;TODAY()),
IF
(
OR(ISBLANK(C_A_DS__c),C_A_DS__c&gt;TODAY()),
&apos;Future&apos;,
&apos;Technical Kick Off&apos;
),
&apos;Initial Data Gathering&apos;
),
&apos;Complete Data Gathering&apos;
),
&apos;Internal Validation&apos;
),
&apos;Initial Site Demo&apos;
),
&apos;Member Validation&apos;
),
&apos;Deployment Complete&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA: Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMA_Status_Formula__c</fullName>
        <formula>IF(OR(AND(BLANKVALUE(C_A_DC__c,Actual_Initial_Site_Demo__c)&lt;C_E_DC__c, BLANKVALUE(C_A_DC__c,TODAY())&lt;C_E_DC__c, Actual_Initial_Site_Demo__c&lt;=TODAY()),C_A_DC__c&lt;TODAY()),
&quot;Green&quot;,
IF(AND(BLANKVALUE(C_A_DC__c, TODAY()) &gt; C_E_DC__c + 28, NOT ISBLANK(Actual_Initial_Site_Demo__c), Actual_Initial_Site_Demo__c&lt;=TODAY()),
&quot;Red&quot;,
IF(AND(BLANKVALUE(C_A_DC__c, TODAY()) &gt; C_E_DC__c, NOT ISBLANK(Actual_Initial_Site_Demo__c), Actual_Initial_Site_Demo__c&lt;=TODAY()),
&quot;Yellow&quot;,
IF(AND(BLANKVALUE(Actual_Initial_Site_Demo__c,C_A_IVC__c)&lt;Initial_Site_Demo_Exp__c, BLANKVALUE(Actual_Initial_Site_Demo__c,TODAY())&lt;Initial_Site_Demo_Exp__c, C_A_IVC__c&lt;=TODAY()),
&quot;Green&quot;,
IF(AND(BLANKVALUE(Actual_Initial_Site_Demo__c, TODAY()) &gt; C_E_DC__c, NOT ISBLANK(C_A_IVC__c), C_A_IVC__c&lt;=TODAY()),
&quot;Red&quot;,
IF(AND(BLANKVALUE(Actual_Initial_Site_Demo__c, TODAY()) &gt; Initial_Site_Demo_Exp__c, NOT ISBLANK(C_A_IVC__c), C_A_IVC__c&lt;=TODAY()),
&quot;Yellow&quot;,
IF(AND(BLANKVALUE(C_A_IVC__c,C_A_DDC__c)&lt;C_E_IVC__c, BLANKVALUE(C_A_IVC__c,TODAY())&lt;C_E_IVC__c, C_A_DDC__c&lt;=TODAY()),
&quot;Green&quot;,
IF(AND(BLANKVALUE(C_A_IVC__c, TODAY()) &gt; Initial_Site_Demo_Exp__c, NOT ISBLANK(C_A_DDC__c), C_A_DDC__c&lt;=TODAY()),
&quot;Red&quot;,
IF(AND(BLANKVALUE(C_A_IVC__c, TODAY()) &gt; C_E_IVC__c, NOT ISBLANK(C_A_DDC__c), C_A_DDC__c&lt;=TODAY()),
&quot;Yellow&quot;,
IF(AND(BLANKVALUE(C_A_DDC__c,Feedback_on_Initial_Data_Actual__c)&lt;C_E_DDC__c, BLANKVALUE(C_A_DDC__c,TODAY())&lt;C_E_DDC__c, Feedback_on_Initial_Data_Actual__c&lt;=TODAY()),
&quot;Green&quot;,
IF(AND(BLANKVALUE(C_A_DDC__c, TODAY()) &gt; C_E_IVC__c, NOT ISBLANK(Feedback_on_Initial_Data_Actual__c), Feedback_on_Initial_Data_Actual__c&lt;=TODAY()),
&quot;Red&quot;,
IF(AND(BLANKVALUE(C_A_DDC__c, TODAY()) &gt; C_E_DDC__c, NOT ISBLANK(Feedback_on_Initial_Data_Actual__c), Feedback_on_Initial_Data_Actual__c&lt;=TODAY()),
&quot;Yellow&quot;,
IF(AND(BLANKVALUE(Feedback_on_Initial_Data_Actual__c,C_A_TPC__c)&lt;Feedback_on_Initial_Data_Expected__c, BLANKVALUE(Feedback_on_Initial_Data_Actual__c,TODAY())&lt;Feedback_on_Initial_Data_Expected__c, C_A_TPC__c&lt;=TODAY()),
&quot;Green&quot;,
IF(AND(BLANKVALUE(Feedback_on_Initial_Data_Actual__c, TODAY()) &gt; C_E_DDC__c, NOT ISBLANK(C_A_TPC__c), C_A_TPC__c&lt;=TODAY()),
&quot;Red&quot;,
IF(AND(BLANKVALUE(Feedback_on_Initial_Data_Actual__c, TODAY()) &gt; Feedback_on_Initial_Data_Expected__c, NOT ISBLANK(C_A_TPC__c), C_A_TPC__c&lt;=TODAY()),
&quot;Yellow&quot;,
IF(AND(C_A_TPC__c&lt;=C_E_TPC__c, NOT ISBLANK(C_A_TPC__c)),
&quot;Green&quot;,
IF(BLANKVALUE(C_A_TPC__c, TODAY()) &gt; Feedback_on_Initial_Data_Expected__c,
&quot;Red&quot;,
IF(BLANKVALUE(C_A_TPC__c, TODAY()) &gt; C_E_TPC__c,
&quot;Yellow&quot;,
&quot;Future/On Hold&quot;))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Deployment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMR_Deployment_Status__c</fullName>
        <description>Created for CR-20141015-7776.</description>
        <formula>CASE( 
( 

 IF(
  OR(
   ISBLANK(C_E_IDI__c),
   ISBLANK(C_A_IDI__c)
  ),
  0,
  IF(
   C_E_IDI__c &gt;= C_A_IDI__c, 
   0, 
   1
  )
 )
 +
 IF(
  OR(
   ISBLANK(C_E_CDI__c),
   ISBLANK(C_A_CDI__c)
  ),
  0,
  IF(
   C_E_CDI__c &gt;= C_A_CDI__c, 
   0, 
   1
  )
 ) 
 +
 If(
  OR(
   ISBLANK(Controlled_Mrkt_Build_Cmplt_Projected__c), 
   ISBLANK(Controlled_Mrkt_Build_Cmplt_Actual__c)
  ),
  0,
  If(
   Controlled_Mrkt_Build_Cmplt_Projected__c &gt;= Controlled_Mrkt_Build_Cmplt_Actual__c,
   0,
   1
  )
 ) 
 + 
 If(
  OR(
   ISBLANK(Open_Market_Cleanup_Complete_Projected__c),
   ISBLANK(Open_Market_Cleanup_Complete_Actual__c)
  ),
  0,
  If(
   Open_Market_Cleanup_Complete_Projected__c &gt;= Open_Market_Cleanup_Complete_Actual__c,
   0,
   1
  )
 ) 
 + 
 If(
  OR(
   ISBLANK(Open_Market_Build_Complete_Projected__c),
   ISBLANK(Open_Market_Build_Complete_Actual__c)
  ),
  0,
  If(
   Open_Market_Build_Complete_Projected__c &gt;= Open_Market_Build_Complete_Actual__c,
   0 ,
   1
  )
 )  
 + 
 If(
  OR(
   ISBLANK(Integration_Planning_Complete_Expected__c),
   ISBLANK(Integration_Planning_Complete_Actual__c)
  ),
  0,
  If(
   Integration_Planning_Complete_Expected__c &gt;= Integration_Planning_Complete_Actual__c,
   0,
   1
  )
 )
 + 
 If(
  OR(
   ISBLANK(Integration_Testing_Complete_Expected__c),
   ISBLANK(Integration_Testing_Complete_Actual__c)
  ),
  0,
  If(
   Integration_Testing_Complete_Expected__c &gt;= Integration_Testing_Complete_Actual__c,
   0,
   1
  )
 )
 +
 If(
  OR(
   ISBLANK(Integration_Configuration_Completed_Exp__c),
   ISBLANK(Integration_Configuration_Completed_Act__c)
  ),
  0,
  If(
   Integration_Configuration_Completed_Exp__c &gt;= Integration_Configuration_Completed_Act__c,
   0,
   1
  )
 ) 
 +
 If(
  OR(
   ISBLANK(Deployment_Start_Expected__c), 
   ISBLANK(C_A_DS__c)
  ),
  0,
  If(
   Deployment_Start_Expected__c &gt;= C_A_DS__c,
   0,
   1
  )
 ) 

 + 
 
 If(
  OR(
   ISBLANK(C_E_DC__c), 
   ISBLANK(C_A_DC__c)
  ),
  0,
  If(
   C_E_DC__c &gt;= C_A_DC__c,
   0,
   1
  )
 ) 
), 

0, &quot;Green&quot;,
1, &quot;Yellow&quot;,
&quot;Red&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMR Current Deployment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_BA_DA_Site_Review__c</fullName>
        <inlineHelpText>Enter the date the BA/DA site review was completed for this deployment</inlineHelpText>
        <label>BA/DA Site Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Corrections__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirm that we understand and have fully implemented Corrections within the PostLoadSQL for this deployment</inlineHelpText>
        <label>Corrections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM_Data_Load_Tables__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirm that the data load infrastructure for this member has been retrofitted to utilize the full temp_raw &gt; temp_load_raw &gt; temp_load structure</inlineHelpText>
        <label>Data Load Tables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM_Deployment_Start_Date__c</fullName>
        <label>Deployment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Deployment_Status__c</fullName>
        <inlineHelpText>Subjective deployment status as agreed upon by deployment team.</inlineHelpText>
        <label>Deployment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Future/On Hold</fullName>
                <color>#666666</color>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPM_Deployment_Weight__c</fullName>
        <inlineHelpText>Enter the relative complexity of this deployment, using 1 for a completely new deployment on a system we have not used previously.  Will be used for capacity planning purposes.</inlineHelpText>
        <label>CPM Deployment Weight</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPM_Diagnostics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirm that we have run, reviewed, and shared the Generic Diagnostics for this deployment.</inlineHelpText>
        <label>Diagnostics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM_Expected_Initial_Site_Review__c</fullName>
        <inlineHelpText>Enter the target date for the member Initial Site Review</inlineHelpText>
        <label>Expected Initial Site Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Expected_Soft_Launch__c</fullName>
        <inlineHelpText>Enter the targeted date for the Soft Launch</inlineHelpText>
        <label>Expected Soft Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Initial_Site_Review__c</fullName>
        <inlineHelpText>Enter the date the Initial Site Review for the deployment was conducted with the member.</inlineHelpText>
        <label>Initial Site Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Leader</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPM_Soft_Launch__c</fullName>
        <inlineHelpText>Enter the date the Soft Launch for this deployment was conducted with the member</inlineHelpText>
        <label>Soft Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Target_BA_DA_Site_Review__c</fullName>
        <inlineHelpText>Enter the target date for the BA/DA Site Review</inlineHelpText>
        <label>Target BA/DA Site Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Target_Tech_Planning_Call__c</fullName>
        <formula>C_A_DS__c + 11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Tech Planning Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPRM_Deployment_Health__c</fullName>
        <formula>IF (CPRM_Missed_Milestones__c  &gt;=  2, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Calculated based on number of milestones missed&quot;),
IF (CPRM_Missed_Milestones__c = 1, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Calculated based on number of milestones missed&quot;), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Calculated based on number of milestones missed&quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPRM Deployment Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPRM_Missed_Milestones__c</fullName>
        <formula>IF(Template_Sent_Deviation__c &gt;0,1,0)+IF(Technical_Planning_Complete_Deviation__c &gt;0,1,0)+IF( Redlining_Complete_Deviation__c &gt;0,1,0)+IF(Legal_Complete_Deviation__c &gt;0,1,0)+IF( Sample_Data_In__c &gt;0,1,0)+IF(Feedback_on_Initial_Data_Deviation__c &gt;0,1,0)+IF(Historical_Data_In__c &gt;0,1,0)+IF(Data_Diagnostics_Complete_Deviation__c &gt;0,1,0)+IF( DAS_Received_Deviation__c &gt;0,1,0)+IF(DAS_Approved_Deviation__c &gt;0,1,0)+IF(Initial_Site_Build_Complete_Deviation__c &gt;0,1,0)+IF(Internal_Validation_Complete__c &gt;0,1,0)+IF(UAT_Onsite_Exp__c &gt;0,1,0)+IF(Deployment_SignOff_Deviation__c &gt;0,1,0)+IF( Recurring_Update_Sign_Off__c &gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPRM Missed Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_A_CDI__c</fullName>
        <description>Phase 2 milestone field common to all Crimson products</description>
        <label>Complete Data In (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_DC__c</fullName>
        <description>Phase 4 milestone field common to all Crimson products</description>
        <inlineHelpText>Date site is moved to production</inlineHelpText>
        <label>Deployment Sign Off (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_DDC__c</fullName>
        <description>Phase 2 milestone field common to all Crimson products</description>
        <inlineHelpText>Date full data is signed off and site build can commence</inlineHelpText>
        <label>Data Diagnostics Complete (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_DS__c</fullName>
        <description>Phase I milestone field common to all Crimson products</description>
        <label>Deployment Start (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_IDC__c</fullName>
        <description>Phase 2 milestone common to all Crimson products</description>
        <label>Initial Diagnostics Complete (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_IDI__c</fullName>
        <description>Phase 2 milestone field common to all Crimson products</description>
        <label>Initial Data In (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_ISBC__c</fullName>
        <description>Phase 3 milestone field common to all Crimson products</description>
        <label>Initial Site Build Complete (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_IVC__c</fullName>
        <description>Phase 3 milestone field common to all Crimson products</description>
        <inlineHelpText>Date test site has passed internal validation and is ready for soft launch.</inlineHelpText>
        <label>Internal Validation Complete (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_A_TPC__c</fullName>
        <description>Phase I milestone field common to all Crimson products</description>
        <inlineHelpText>Date of technical call</inlineHelpText>
        <label>Technical Planning Complete (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_CDI__c</fullName>
        <description>Phase 2 milestone field common to all Crimson products</description>
        <label>Complete Data In (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_DC__c</fullName>
        <description>Phase 4 milestone field common to all Crimson products</description>
        <label>Deployment Sign Off (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_DDC__c</fullName>
        <description>Phase 2 milestone field common to all Crimson products</description>
        <label>Data Diagnostics Complete (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_IDC__c</fullName>
        <description>Phase 2 milestone common to all Crimson products</description>
        <label>Initial Diagnostics Complete (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_IDI__c</fullName>
        <description>Phase 2 milestone field common to all Crimson products</description>
        <label>Initial Data In (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_ISBC__c</fullName>
        <description>Phase 3 milestone field common to all Crimson products</description>
        <label>Initial Site Build Complete (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_IVC__c</fullName>
        <description>Phase 3 milestone field common to all Crimson products</description>
        <label>Internal Validation Complete (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_E_TPC__c</fullName>
        <description>Phase I milestone field common to all Crimson products</description>
        <label>Technical Planning Complete (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cleansing_Data_Notes__c</fullName>
        <label>Contract I.D.</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cleansing_Data_Provider__c</fullName>
        <label>Cleansing Data Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansing_Data_Sent_Actual__c</fullName>
        <label>Cleansing Data Returned (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cleansing_Data_Sent_Expected__c</fullName>
        <label>Cleansing Data Sent (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinical_Integration_Counter__c</fullName>
        <description>Serves as a boolean indicator of module purchased for dashboard calculations</description>
        <formula>If(Clinical_Integration__c= True, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Integration Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Created as a part of CR 4488</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Model_Population_Loaded__c</fullName>
        <label>Commercial Model Population Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compass_Connect_Involvement_Phase__c</fullName>
        <label>Compass Connect Involvement Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Drop Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compass_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if this is for a deployment object that includes Crimson Data Acquisition Services involvement.</inlineHelpText>
        <label>Compass Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Data_In_Original__c</fullName>
        <description>Created as part of CR-5511.</description>
        <label>Complete Data In (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_Data_In_Site_Build_Submitted__c</fullName>
        <description>Calculates number of days between Complete Data In (Actual) and Site Build Submitted (Actual)</description>
        <formula>Initial_Site_Build_Submitted_Actual__c - C_A_CDI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Data In-Site Build Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_Data_In_to_Sign_Off__c</fullName>
        <formula>C_A_DC__c - C_A_CDI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Data In to Sign Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_of_Commercial_Rate_Schedules__c</fullName>
        <label>Completion of Commercial Rate Schedules</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_of_Gov_based_Rate_Schedule__c</fullName>
        <label>Completion of Gov-based Rate Schedule</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_of_Government_Rate_Schedules__c</fullName>
        <label>Completion of Government Rate Schedules</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-7163.</description>
        <label>Compliance Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DeploymentsQJmp</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>